Fix typo in error.html, update live server port, and improve styling
- Fix a typo in the error.html file
- Update the live server port in the .vscode/settings.json file
- Improve the styling in various CSS files

--- a/error500.html
+++ b/error500.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure Track</title>
-    <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/error.css">
 
     <link rel="icon" type="image/png" href="img/logo.png">
@@ -26,6 +25,9 @@
     <img src="img/cara.png" height="170px" width="170px"> 
     <span class="letras">0</span>
 </div>
+
+<!-- <p class="text">Lo sentimos por el inconveniente. Por favor, vuelve mas tarde.</p> -->
+ 
 </div>
 </section>
     </main>
