--- a/terminos-y-condiciones.html
+++ b/terminos-y-condiciones.html
@@ -6,6 +6,7 @@
     <title>Secure Track</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/config.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,7 +74,7 @@
         </div>
     </section>
     <div class="terminos-y-condiciones">
-        <p><strong>Última actualización:</strong> [Fecha]</p>
+        <p><strong>Última actualización:</strong>23/10/2024</p>
 
         <p>Bienvenido a Secure Track. Al acceder y utilizar nuestro sitio web y nuestros servicios, aceptas cumplir con los siguientes términos y condiciones. Si no estás de acuerdo con alguno de estos términos, por favor, no utilices nuestros servicios.</p>
 
@@ -103,14 +104,14 @@
         <p>Nos reservamos el derecho de modificar o interrumpir, temporal o permanentemente, el sitio web o cualquier parte del mismo sin previo aviso. No seremos responsables ante ti o ante terceros por cualquier modificación, suspensión o interrupción del sitio web.</p>
 
         <h2>8. Ley Aplicable</h2>
-        <p>Estos Términos y Condiciones se regirán e interpretarán de acuerdo con las leyes del [País o Jurisdicción], sin tener en cuenta sus principios de conflicto de leyes. Cualquier disputa que surja en relación con estos términos será sometida a la jurisdicción exclusiva de los tribunales de [Ciudad o Región].</p>
+        <p>Estos Términos y Condiciones se regirán e interpretarán de acuerdo con las leyes de Argentina, sin tener en cuenta sus principios de conflicto de leyes. Cualquier disputa que surja en relación con estos términos será sometida a la jurisdicción exclusiva de los tribunales de Buenos Aires.</p>
 
         <h2>9. Contacto</h2>
         <p>Si tienes alguna pregunta sobre estos Términos y Condiciones, por favor contáctanos a:</p>
-        <p><strong>Secure Track</strong><br>
-        [Dirección física, si aplica]<br>
-        Correo electrónico: <a href="mailto:[dirección de correo electrónico]">[dirección de correo electrónico]</a><br>
-        Teléfono: [Número de teléfono]</p>
+        <p><strong>Secure Track</strong>
+            <br>
+        Correo electrónico: <a href="mailto:secureTrack@gmail.com">secureTrack@gmail.com</a><br>
+        Teléfono: <strong> 1155743908</strong></p>
     </div>
     <footer>
         <div class="footer-content">
