--- a/politica-de-privacidad.html
+++ b/politica-de-privacidad.html
@@ -6,6 +6,7 @@
     <title>Secure Track</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/config.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,7 +76,7 @@
     </section>
     <div class="politica-de-privacidad">
         <h1>Política de Privacidad de Secure Track</h1>
-        <p><strong>Última actualización:</strong> [Fecha]</p>
+        <p><strong>Última actualización:</strong> 23/10/2024</p>
 
         <p>Bienvenido a Secure Track. Nos comprometemos a proteger y respetar tu privacidad. Esta Política de Privacidad explica cómo recopilamos, usamos, divulgamos y protegemos tu información cuando utilizas nuestro sitio web y nuestros servicios.</p>
 
@@ -85,7 +86,7 @@
         <p>Cuando te registras en Secure Track, recopilamos la siguiente información personal:</p>
         <ul>
             <li>Nombre</li>
-            <li>Dirección de correo electrónico</li>
+            <li>Documento Nacional de Identidad</li>
             <li>Contraseña</li>
         </ul>
 
@@ -123,13 +124,13 @@
             <li><strong>Eliminación:</strong> Solicitar la eliminación de tu información personal bajo ciertas condiciones.</li>
             <li><strong>Oposición:</strong> Oponerte al procesamiento de tu información en determinadas circunstancias.</li>
         </ul>
-        <p>Para ejercer estos derechos, contáctanos a través de <a href="mailto:[dirección de correo electrónico de contacto]">[dirección de correo electrónico de contacto]</a>.</p>
+        <p>Para ejercer estos derechos, contáctanos a través de  <a href="mailto:secureTrack@gmail.com">secureTrack@gmail.com</a>.</p>
 
         <h2>6. Cambios en la Política de Privacidad</h2>
         <p>Podemos actualizar esta Política de Privacidad de vez en cuando. Publicaremos cualquier cambio en esta página y, si los cambios son significativos, te notificaremos por correo electrónico o mediante un aviso prominente en el sitio web.</p>
 
         <h2>7. Contacto</h2>
-        <p>Si tienes alguna pregunta o inquietud sobre esta Política de Privacidad, por favor contáctanos a:  <a href="mailto:[dirección de correo electrónico]">[dirección de correo electrónico]</a></p>
+        <p>Si tienes alguna pregunta o inquietud sobre esta Política de Privacidad, por favor contáctanos a:  <a href="mailto:secureTrack@gmail.com">secureTrack@gmail.com</a></p>
            </div>
            <footer>
             <div class="footer-content">
