--- a/selectorItems.html
+++ b/selectorItems.html
@@ -42,8 +42,7 @@
     <div class="information">
         <div class="user-info">
             <div class="div-dni">
-                <p class="user">USUARIO</p>
-                <p class="dni" id="dni"></p>
+                <p class="user" id="dni"></p>
             </div>
             <img src="" alt="avatar" class="avatar" id="avatar"> 
         </div>
