Refactor CSS to add background-size property and improve styling

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
             <img id="image-user" style="display: none;" alt="Profile Photo" />
          </div>
     </header>
-   
     <section id="userSettings" class="user-settings">
         <button class="close-btn" id="closeBtn">&times;</button> 
         <div class="information">
             <div class="user-info">
                 <div class="div-dni">
-                    <p class="user"><b>USUARIO</b></p>
-                    <p class="dni" id="dni"></p>
+                    <p class="user" id="dni"></p>
                 </div>
                 <img src="" alt="avatar" class="avatar" id="avatar"> 
             </div>
@@ -42,7 +40,10 @@
                 <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
                 <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
             </details>
-    
+           <div class="ambos">
+    <div class="div-button">
+        <button class="nfc" id="nfc"> registrar nfc</button>
+    </div>
             <div class="div-log">
                 <button class="Btn" id="logoutBtn">
                     <div class="sign">
@@ -53,6 +54,8 @@
                     <div class="text"></div>
                 </button>
             </div>
+        </div> 
+    
         </div>
     </section>
 
