--- a/aboutus.html
+++ b/aboutus.html
@@ -28,8 +28,7 @@
         <div class="information">
             <div class="user-info">
                 <div class="div-dni">
-                    <p class="user"><b>USUARIO</b></p>
-                    <p class="dni" id="dni"></p>
+                    <p class="user" id="dni"></p>
                 </div>
                 <img src="" alt="avatar" class="avatar" id="avatar"> 
             </div>
@@ -38,7 +37,10 @@
                 <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
                 <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
             </details>
-    
+           <div class="ambos">
+    <div class="div-button">
+        <button class="nfc" id="nfc"> registrar nfc</button>
+    </div>
             <div class="div-log">
                 <button class="Btn" id="logoutBtn">
                     <div class="sign">
@@ -49,6 +51,8 @@
                     <div class="text"></div>
                 </button>
             </div>
+        </div> 
+    
         </div>
     </section>
 
