Refactor CSS to adjust font size and improve styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
             <details>
                 <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
-                <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
+                <p class="p-transecciones" id="transacciones">Aquí aparecerán sus transacciones</p>
             </details>
            <div class="ambos">
     <div class="div-button">
