--- a/qr.html
+++ b/qr.html
@@ -49,7 +49,6 @@
             <img id="image-user" style="display: none;" alt="Profile Photo" />
          </div>
     </header>
-
     <section id="userSettings" class="user-settings">
         <button class="close-btn" id="closeBtn">&times;</button> 
         <div class="information">
@@ -62,7 +61,7 @@
     
             <details>
                 <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
-                <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
+                <p class="p-transecciones" id="transacciones">Aquí aparecerán sus transacciones</p>
             </details>
            <div class="ambos">
     <div class="div-button">
@@ -83,8 +82,6 @@
         </div>
     </section>
     <main>
-
-       
         <div class="qr-container">
             <div class="lineal-qr">
                 <div class="white-qr">
@@ -108,7 +105,6 @@
             </div>
         </div>
     </main>
-
     <footer>
         <div class="footer-content">
             <div class="footer-links">
