--- a/selectorItems.html
+++ b/selectorItems.html
@@ -49,7 +49,7 @@
 
         <details>
             <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
-            <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
+            <div class="p-transecciones" id="transacciones"></div>
         </details>
        <div class="ambos">
 <div class="div-button">
