--- a/terminos-y-condiciones.html
+++ b/terminos-y-condiciones.html
@@ -56,7 +56,7 @@
     
             <details>
                 <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
-                <p class="p-transecciones">Aquí aparecerán sus transacciones</p>
+                <p class="p-transecciones" id="transacciones">Aquí aparecerán sus transacciones</p>
             </details>
            <div class="ambos">
     <div class="div-button">
