--- a/qr.html
+++ b/qr.html
@@ -107,7 +107,7 @@
         <div class="modal" id="modal">
             <div class="modal-content">
                 <span class="close-button" id="closeModal">&times;</span>
-                <p id="modal-message">Por favor, utiliza el qr que te proporcionamos!!</p>
+                <p id="modal-message"></p>
                 <div class="div-img">
                     <img src="img/logo.png" alt="logo" height="80px" width="80px">
                 </div>
