--- a/asistente.html
+++ b/asistente.html
@@ -42,21 +42,13 @@
         </div>
 
         <details>
-            <summary id="summary" class="ver-transecciones">Ver mis transacciones pasadas</summary>
-            <div class="p-transecciones" id="transacciones"></div>
+            <summary class="ver-transecciones">Ver mis transacciones pasadas</summary>
+            <p class="p-transecciones" id="transacciones">Aquí aparecerán sus transacciones</p>
         </details>
        <div class="ambos">
-
-    
 <div class="div-button">
-    <div class="b" style="margin: 2%;  letter-spacing: 2px;">
-    <button class="nfc" id="nfc"> REGISTRAR NFC</button>
+    <button class="nfc" id="nfc"> registrar nfc</button>
 </div>
-<div class="a" style="margin: 2%;">
-    <a href="asing.html" class="asignar nfc"  id="asignar" style="display: none; letter-spacing: 2px;"> ASIGNAR COMPU </a>
-</div>
-</div>
-
         <div class="div-log">
             <button class="Btn" id="logoutBtn">
                 <div class="sign">
@@ -106,13 +98,6 @@
     </tbody>
 </table>
 </main>
-
-<div class="pagination">
-    <button id="prevButton" onclick="previousPage()" class="pagination-button">Anterior</button>
-    <span id="currentPage">Página 1 de X</span>
-    <button id="botonSiguiente" onclick="nextPage(transacciones.tokens)" class="pagination-button">Siguiente</button>
-</div>
-
     <footer>
         <div class="footer-content">
             <div class="footer-links">
