Refactor error handling UI, update carousel styles, and add new icons and images

--- a/error500.html
+++ b/error500.html
@@ -26,7 +26,7 @@
     <span class="letras">0</span>
 </div>
 
-<!-- <p class="text">Lo sentimos por el inconveniente. Por favor, vuelve mas tarde.</p> -->
+<p class="text">Lo sentimos por el inconveniente. Por favor, vuelve mas tarde.</p>
  
 </div>
 </section>
