Refactor QR styles for improved responsiveness, update HTML structure, and clean up JavaScript code

--- a/qr.html
+++ b/qr.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             
-            <p id="text" class="textoQr"></p>
+            <p id="text" class="textQr"></p>
             <div class="textQr" id="hola"></div>
             <p style="color: red;" id="error"></p>
 
