--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <img src="img/izq.png" class="control" id="prevBtn"></img>
             <div class="carousel">
                 <div class="carousel-inner" id="carousel">
-                    <div class="carousel-item color1"><img class="img" src="img/carrousel/1.jpg" alt=""></div>
-                    <div class="carousel-item color2"><img class="img" src="img/carrousel/2.jpg" alt=""></div>
+                    <div class="carousel-item color1"></div>
+                    <div class="carousel-item color2"></div>
                     <div class="carousel-item color3"><p>Slide 3</p></div>
                     <div class="carousel-item color4"><p>Slide 4</p></div>
                     <div class="carousel-item color5"><p>Slide 5</p></div>
